# pfp

./: .gitignore  Cargo.toml  Makefile  README.md  defaults.json
.serena/: project.yml
docs/: API.md  QUICKREF.md
src/: cli.rs  config.rs  context.rs  fs.rs  fzf.rs  lib.rs  main.rs  selectors.rs  tmux.rs
tests/: cli_test.rs  config_test.rs  scan_test.rs
